2011-03-08  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Darin Adler.

        The first time animations are committed they have a bad start time
        https://bugs.webkit.org/show_bug.cgi?id=55947

        Do a check for a returned lastCommitTime of <=0 and replace it
        with the mediaTime.


        * platform/graphics/ca/win/CACFLayerTreeHost.cpp:
        (WebCore::CACFLayerTreeHost::notifyAnimationsStarted):

2011-03-08  James Kozianski  <koz@chromium.org>

        Reviewed by David Levin.

        Expose isValidProtocol() in KURL.h.
        https://bugs.webkit.org/show_bug.cgi?id=54594

        This is needed to validate protocols used in calls to
        navigator.registerProtocolHandler().

        * platform/KURL.cpp:
        * platform/KURL.h:
        * platform/KURLGoogle.cpp:
        (WebCore::isValidProtocol):

2011-03-08  Adam Roben  <aroben@apple.com>

        Set svn:mime-type to text/css for all Inspector CSS files

        This will cause them to be served with the correct MIME type from svn.webkit.org's web
        interface.

        Rubber-stamped by Tim Hatcher.

        * inspector/front-end/audits.css: Added property svn:mime-type.
        * inspector/front-end/goToLineDialog.css: Added property svn:mime-type.
        * inspector/front-end/heapProfiler.css: Added property svn:mime-type.
        * inspector/front-end/helpScreen.css: Added property svn:mime-type.
        * inspector/front-end/inspector.css: Added property svn:mime-type.
        * inspector/front-end/inspectorSyntaxHighlight.css: Added property svn:mime-type.
        * inspector/front-end/networkPanel.css: Added property svn:mime-type.
        * inspector/front-end/popover.css: Added property svn:mime-type.
        * inspector/front-end/textViewer.css: Added property svn:mime-type.

2011-03-08  Andrei Popescu  <andreip@google.com>

        Reviewed by Steve Block.

        IDBCallbacks::onsuccess(IDBIndex*) is unused and should be removed.